src/tests/inserts/snapshots/ciboulette2postgres__tests__inserts__query_params__sorting_multiple_fields.snap
---
source: src/tests/inserts/query_params.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type": "peoples",
    "data": {
      "age": 19,
      "first-name": "Hello",
      "gender": "M",
      "last-name": "World",
      "twitter": "@myhandle"
    },
    "related": null
  }
]
